# OSFyber

./: .gitignore  LICENSE.txt  README.md  mypy.ini  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test.yml
docs/: README.rst
osfyber/: analysis.py  materials.py  standardsizes.py  system.py
src/osfyber/: analysis.py  materials.py  system.py
tests/: circular_column.py  test_system.py
