[tool.poetry]
name = "osfyber"
version = "0.2.0"
description = "2D moment curvature analysis"
authors = ["Nathanael Rea"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.9.2"
numpy = "^2.1.2"
scipy = "^1.14.1"
pybind11 = "^2.13.6"
MeshPy = "^2022.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
