[project]
name = "osfyber"
version = "0.2.0"
description = "2D moment curvature analysis"
authors = [{ name = "Nathanael Rea" }]
requires-python = "~=3.12"
readme = "README.md"
license = "GPL-3.0"
dependencies = [
  "matplotlib>=3.9.2,<4",
  "numpy>=2.1.2,<3",
  "scipy>=1.14.1,<2",
  "pybind11>=2.13.6,<3",
  "MeshPy>=2022.1.3,<2023",
  "pyqt6>=6.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.9.3",
]
